--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kr-print-designer",
-  "version": "1.1.7",
-  "description": "一个基于Vue、ElementUi、Lodop的打印模板设计器。实现打印模板的设计、预览和打印功能。",
+  "name": "vue-kr-print-designer",
+  "version": "1.0.2",
+  "description": "自修改版本2",
   "publish": true,
   "main": "lib/kr-print-designer.umd.min.js",
   "files": [
